publish and unpublish bulk now working
